added new changes

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     ">
 </head>
 <body>
+    <div>
+        <img src="images/cloud-laptop.png" alt="Dickens">
+    </div>
 <h1>my hobbies</h1>
 <h3>
     <ul>
